--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.13.1",
     "react-html5-camera-photo": "^1.5.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "rita": "^1.3.94"
   },
   "scripts": {
     "start": "react-scripts start",
